fixed dark mode contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -7,31 +7,40 @@ header img {
     box-shadow: 5px 5px 15px black;
     grid-column: 2/3;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+picture {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    width: 100%;
+}
 .hero-img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     object-fit: cover;
     box-shadow: 5px 5px 15px;
 }
 .hero-label {
-    position: absolute;
-    top: 190px;
-    left: 60px;
-    background: radial-gradient(#fff #4d5b97);
-    border: 1px solid rgba (0,0,0,.75);
     padding: .5rem;
-    box-shadow: 0 0 3rem #fff;
     opacity: .75;
     max-width: 8rem;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    z-index: 10;
 }
 .hero-label p {
     margin: 0;
-    padding: .25rem;
+    padding: 1rem;
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: "Great Vibes", serif;
-    z-index: -1
-    ;
+    z-index: -1;
+
+    background: radial-gradient(#fff #4d5b97);
+    border: 1px solid rgba (0,0,0,.75);
+    box-shadow: 0 0 3rem #fff;
 }
 header,
 main,
@@ -58,6 +67,7 @@ footer {
 #mode {
     right: 3.5rem;
     cursor: pointer;
+    color: white;
 }
 #menu:hover, #mode:hover {
     transform: scale(1.1);
@@ -146,7 +156,6 @@ main {
 {
     width: 100%;
     object-fit: fill;
-    border-radius: 5%;
     margin: 3rem auto;
 }
 footer {
