--- a/styles/larger.css
+++ b/styles/larger.css
@@ -18,8 +18,11 @@
         grid-column: 1/3;
     }
     .hero-label {
-        top: 300px;
-        left: 150px;
+        margin: 5rem auto;
+        max-width: 15rem;
+    }
+    .hero-label p {
+        font-size: 2.25rem;
     }
     main h2 {
         grid-column: 1/3;
